--- a/main.html
+++ b/main.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
-<body>
-	<!-- the entire body must be written by student -->
+	<main>
+    <h1>Welcome to Accio Jobs!</h1>
+    <!-- Add more content here as needed -->
+  </main>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
